# LaGriT

./: CMakeLists.txt
PyLaGriT/: pyproject.toml  ruff.toml  setup.py
PyLaGriT/documentation/source/: conf.py  gettingstarted.rst
PyLaGriT/examples/: create_exo.py  createpts_dxyz.py  ex_convert_files.py  ex_gridder.py  ex_merge_mesh_objects.py  ex_read_lagrit_binary_mos.py  ex_read_mesh.py  ex_refine_edge.py  ex_rotate.py  ex_rotate_stack.py  ex_select_subset.py  ex_triangulate.py  refine_to_object.py  region_example.py  stratigraphic_hex_mesh_tutorial.py
PyLaGriT/examples/arctic_2D/: mesh_pylagrit.py
PyLaGriT/examples/arctic_2D_new/: transect.py
PyLaGriT/examples/arctic_w_ice_wedges/: transectNWSE.py
PyLaGriT/examples/ideas_mesh/: ideas_mesh.py
PyLaGriT/examples/julia/polygon_map/: polygon_map.py
PyLaGriT/examples/read_fehm_mesh/: read_fehm_mesh.py
PyLaGriT/pylagrit/: __init__.py  config.py  pylagrit.py  utilities.py
PyLaGriT/tests/: test_pylagrit.py
src/: fc_bindings.f90
